Remove car_car / theme-lib attributes
This is just to make master compile with the fixit2 CLs
TODO: remove the libs from the mk in pi-car-dev.

Test: compiles
Change-Id: I30252e70027519dd8b9d17b9b2779853c1c71781

--- a/res/layout/link_viewer_activity.xml
+++ b/res/layout/link_viewer_activity.xml
@@ -28,7 +28,7 @@
         app:title="@string/app_name"/>
 
     <TextView
-        style="@style/TextAppearance.Car.Body1"
+        style="?android:attr/textAppearanceLarge"
         android:id="@+id/url_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
