--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -15,7 +15,7 @@
 -->
 <resources>
     <!-- The theme for the LinkViewerActivity. -->
-    <style name="AppTheme" parent="Theme.CarSupportWrapper.NoActionBar" >
+    <style name="AppTheme" parent="android:Theme.DeviceDefault.NoActionBar" >
        <item name="android:tint">@color/car_tint</item>
     </style>
 </resources>
