Fix QR code being dark in day mode and use chassis
This is a cherry-pick of ag/I9a5a2d1e0979bee137b5774726ee0a126f7cae32
and ag/I8123b06f9133725e550d9b396f652c84f7833ae5 as they didn't
seem to automerge.

Bug: 128273352
Test: Manually
Change-Id: Ib62b0b901aed3f20aad3186e5904f280f48b05e3

--- a/res/layout/link_viewer_activity.xml
+++ b/res/layout/link_viewer_activity.xml
@@ -21,11 +21,12 @@
     android:layout_height="match_parent"
     android:background="@android:color/black">
 
-    <androidx.car.widget.CarToolbar
+    <com.android.car.ui.toolbar.Toolbar
         android:id="@+id/car_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="@string/app_name"/>
+        app:title="@string/app_name"
+        app:state="subpage"/>
 
     <TextView
         style="?android:attr/textAppearanceLarge"
@@ -45,5 +46,6 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="40dp"
         android:scaleType="fitCenter"
-        android:layout_centerHorizontal="true" />
+        android:tint="?android:attr/textColorPrimary"
+        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
