Migrate LinkViewer app to use baselayout
Bug: 151230736
Test: Manual
Change-Id: I72fb657855f3e8335506b2b521252d5b5ea3f803

--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -15,5 +15,5 @@
 -->
 <resources>
     <!-- The theme for the LinkViewerActivity. -->
-    <style name="AppTheme" parent="Theme.CarUi"/>
+    <style name="AppTheme" parent="Theme.CarUi.WithToolbar"/>
 </resources>
